# ALAMS

./: .gitignore  ALAMS_DOCUMENTATION.md  CODEBASE.md  DATABASE.md  README.md  SYSTEM.md  pubspec.yaml
.github/workflows/: release.yml
android/: gradle.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  anti_spoof_jni.cpp
assets/models/: README.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/database/: database_service.dart
lib/core/models/: attendance.dart  department.dart  employee.dart
lib/core/providers/: database_provider.dart  sync_refresh_provider.dart
lib/core/services/: sync_service.dart
lib/core/utils/: crypto_utils.dart  image_utils.dart
lib/features/admin/screens/: admin_dashboard.dart  admin_login_screen.dart  department_management_screen.dart  settings_screen.dart
lib/features/attendance/providers/: attendance_provider.dart
lib/features/attendance/screens/: action_screen.dart  attendance_history_screen.dart  selection_screen.dart
lib/features/face_recognition/models/: spoof_result.dart
lib/features/face_recognition/providers/: face_recognition_provider.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
scripts/: supabase_reset.dart
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+14 files in other folders)
